--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,8 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    restuarant_name = ''"
+    "    restuarant_name = 'name'\n",
+    "    return "
    ]
   },
   {
