--- a/index.ipynb
+++ b/index.ipynb
@@ -201,8 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    restuarant_name = 'name'\n",
-    "    return restaurant_name"
+    "    return restaurant"
    ]
   },
   {
