--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    restaurant['rating'] is_better"
+    "    restaurant['rating'] is_better alterna"
    ]
   },
   {
