--- a/index.ipynb
+++ b/index.ipynb
@@ -317,12 +317,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-35b537a0da13>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-35b537a0da13>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    restaurant['rating'] is_better alternative['rating']\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    restaurant['rating'] is_better alternative['rating]"
+    "    restaurant['rating'] is_better alternative['rating']"
    ]
   },
   {
