automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -331,7 +331,8 @@
    ],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if restaurant['rating'] is_better alternative['rating']"
+    "    if restaurant['rating'] > alternative['rating']\n",
+    "        retu"
    ]
   },
   {
