--- a/index.ipynb
+++ b/index.ipynb
@@ -403,12 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if restaurant['price']>alternative['price']"
+    "    if restaurant['price']>alternative['price']:\n",
+    "        return True\n",
+    "    return False"
    ]
   },
   {
